fix(twitch): Make text readable in miscellaneous sections (#253)
* Update extension popup colors

* Update usercard colors

* Update PiP colors

* Bump version

--- a/styles/twitch/catppuccin.user.css
+++ b/styles/twitch/catppuccin.user.css
@@ -2,7 +2,7 @@
 @name           Twitch Catppuccin
 @namespace      github.com/catppuccin/userstyles/styles/twitch
 @homepageURL    https://github.com/catppuccin/userstyles/tree/main/styles/twitch
-@version        1.1.12
+@version        1.1.13
 @description    Soothing pastel theme for Twitch
 @author         Catppuccin
 @updateURL      https://github.com/catppuccin/userstyles/raw/main/styles/twitch/catppuccin.user.css
@@ -252,6 +252,18 @@
       color: @text;
     }
 
+    /* Following usercard */
+
+    div[data-a-target="user-card-modal"] p {
+      color: @text !important;
+    }
+
+    /* PiP username */
+
+    div.mini-overlay__title span {
+      color: @text;
+    }
+
     /* Viewercard username */
 
     div.viewer-card-header__display-name h4 {
@@ -266,6 +278,28 @@
 
     div.viewer-card-header__display-name p {
       color: @text !important;
+    }
+
+    /* Extension name */
+
+    div[aria-describedby="popover-extensions-body"] h6 {
+      color: @text;
+    }
+
+    /* Extension description */
+
+    div.extensions-popover-view-layout__body p {
+      color: text;
+    }
+
+    /* Extension service buttons */
+
+    div.extensions-popover-view-layout__body svg {
+      color: @subtext0;
+    }
+
+    div.extensions-popover-view-layout__body div {
+      color: @text;
     }
 
     & .carousel-metadata {
